--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <body>
-    <h1>Hola pibx</h1>
+    <title>Pagina de Benti</title>
+    <h2>Hola pibx</h2>
     <p>soy un capo.</p>
 </body>
 </html>
