--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ﻿<!DOCTYPE html>
 <html>
-<body>
-    <title>Pagina de Benti</title>
-    <h2>Hola pibx</h2>
-    <p>soy un capo.</p>
-</body>
+<title>Pagina de Benti</title>
+    <body>
+        <center>
+            <h2>Hola pibx</h2>
+            <p>soy un capo.</p>
+        </center>
+    </body>
 </html>
