--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>Pagina de Benti</title>
     <body>
         <center>
-            <h2>Hola pibx</h2>
-            <p>soy un capo.</p>
+            <h1>Hola pibx</h1>
+            <p style="color:red; font-size:100px">soy un capo.</p>
         </center>
     </body>
 </html>
