--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <title>Pagina de Benti</title>
-    <body background="fondo madera blanco">
+    <body background="fondo.jpg">
         <center>
             <h1>Hola pibx</h1>
             <p style="color:red; font-size:100px">soy un capo.</p>
