--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <center>
             <h1>Hola pibx</h1>
             <p style="color:red; font-size:100px">soy un capo.</p>
+            <img border="2px" src="rana3.jpg" heigth="10%" width="10%" />
         </center>
     </body>
 </html>
