--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>Pagina de Benti</title>
     <body background="fondo.jpg">
         <center>
-            <h1>Hola pibx</h1>
-            <p style="color:red; font-size:100px">soy un capo.</p>
+            <p style="font-size:100px">La Página de Benti</p>
+            <p style="font-size:30px">Bienvenido</p>
             <img border="2px" src="rana3.jpg" heigth="10%" width="10%" />
         </center>
     </body>
