--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <title>Pagina de Benti</title>
-    <body background="fondo.jpg">
+    <body>
         <center>
             <p style="font-size:100px">La Página de Benti</p>
             <p style="font-size:30px">Bienvenido</p>
