--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <title>Pagina de Benti</title>
-   <bgsound src="saxobeat.mp3" loop="infinite" volume="5">
+   <audio src="https://www.youtube.com/watch?v=8B-hedph6Qs"></audio>
      <body background="fondo.jpg">
         <center>
             <p style="font-size:80px">La Página de Benti</p>
