--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <title>Pagina de Benti</title>
-   <audio id="id12"src="saxobeat.mp3" preload="none" controls autoplay loop></audio>
+   <audio src="saxobeat.mp3" preload="none" controls autoplay loop></audio>
      <body background="fondo.jpg">
         <center>
             <p style="font-size:80px">La Página de Benti</p>
