--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <title>Pagina de Benti</title>
    <audio src="saxobeat.mp3" preload="none" controls autoplay loop></audio>
      <body background="fondo.jpg">
-        <center>
-            <p style="font-size:80px">La Página de Benti</p>
-            <p style="font-size:30px">Bienvenido</p>
-            <img border="2px" src="rana3.jpg" heigth="20%" width="20%" />
-        </center>
+         <center>
+             <p style="font-size:80px">La Página de Benti</p>
+             <p style="font-size:30px">Bienvenido</p>
+             <a href="https://www.instagram.com/okumurabenti/">
+                 <img alt="Instagram" src="instagram.png"
+                      width="10%" height="%10">
+                 </a>
+                 <img border="2px" src="rana3.jpg" heigth="20%" width="20%" />
+         </center>
     </body>
 </html>
