--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
          <center>
              <p style="font-size:80px">La Página de Benti</p>
              <p style="font-size:30px">Bienvenido</p>
-             <a href="https://www.instagram.com/okumurabenti/">
+             <p href="https://www.instagram.com/okumurabenti/">
                  <img alt="Instagram" src="instagram.png"
                       width="10%" height="%10">
-                 </a>
+                 </p>
                  <img border="2px" src="rana3.jpg" heigth="20%" width="20%" />
          </center>
     </body>
