--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
          <center>
              <p style="font-size:80px">La Página de Benti</p>
              <p style="font-size:30px">Bienvenido</p>
-             <p href="https://www.instagram.com/okumurabenti/">
+             <a href="https://www.instagram.com/okumurabenti/">
                  <img alt="Instagram" src="instagram.png"
                       width="10%" height="%10">
-                 </p>
-                 <img border="2px" src="rana3.jpg" heigth="20%" width="20%" />
+                 </a>
+                 <p img border="2px" src="rana3.jpg" heigth="20%" width="20%" />
          </center>
     </body>
 </html>
