--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
              
          </center>
     </body>
-    <a href="https://www.instagram.com/okumurabenti/">
-    <img src="instagram.png"
-         width="10%" height="%10">
+    <a href="https://www.instagram.com/okumurabenti/" target="_blank" >
+    <img src="instagram.png" 
+         width="5%" height="5%" />
     </a>
 </html>
